updated nav bar

--- a/landing.html
+++ b/landing.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html class="has-background-dark">
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
     <script defer src="./assets/bulmaJS.js"></script>
   </head>
   <body>
+    
+    <div class="block">
+        <nav class="nav">
+            <div class="nav-left">
+                <a href="" class="nav-item">
+                <h1 class="title is-4 has-text-white">Bit Jumpers</h1>
+                </a>
+            </div>
+
+            <div class="nav-center">
+                <a href="" class="nav-item">
+                    <span class="icon">
+                        <i class="fa fa-github has-text-black"></i>
+                    </span>
+                </a>
+            </div>
+        </nav>
+
+    </div>
+
     <section class="section">
       <div class="container is-clipped">
         <div id="slider">
@@ -20,11 +41,11 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
+              <div class="title is-3">
                 Halo Infinite
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                The legendary Halo series returns with the most expansive Master Chief campaign yet and a ground-breaking free to play multiplayer experience.
               </div>
             </div>
           </div>
@@ -39,11 +60,11 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
+              <div class="title is-3">
                 Mass Effect Legendary Edition
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                Relive the legend of Commander Shepard in the highly acclaimed Mass Effect trilogy with the Mass Effect Legendary Edition.
               </div>
             </div>
           </div>
@@ -58,11 +79,11 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
+              <div class="title is-3">
                 Skyrim
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                Winner of more than 200 Game of the Year Awards, Skyrim Special Edition brings the epic fantasy to life in stunning detail. The Special Edition includes the critically acclaimed game and add-ons with all-new features.
               </div>
             </div>
           </div>
@@ -77,11 +98,11 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
+              <div class="title is-3">
                 NBA 2K
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                NBA 2K22 is the latest title in the world-renowned, best-selling NBA 2K basketball video game series, create your own legacy on the blacktop.
               </div>
             </div>
           </div>
@@ -96,11 +117,11 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
+              <div class="title is-3">
                 God of War
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                His vengeance against the Gods of Olympus years behind him, Kratos now lives as a man in the realm of Norse Gods and monsters. It is in this harsh, unforgiving world that he must fight to survive… and teach his son to do the same.
               </div>
             </div>
           </div>
@@ -112,16 +133,18 @@
               </figure>
             </div>
             <div class="card-content">
-              <div class="item__title">
-                Mon titre 6
+              <div class="title is-3">
+                Call of Duty: Modern Warfare
               </div>
               <div class="item__description">
-                Ici une petite description pour tester le slider
+                Experience a visceral Campaign or assemble your team in the ultimate online playground with multiple Special Ops challenges, a mix of Multiplayer maps and modes and the franchise's premiere Battle Pass system.
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    
   </body>
 </html>
