--- a/landing.html
+++ b/landing.html
@@ -8,38 +8,23 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
   <!-- <script defer src="./assets/bulmaJS.js"></script> -->
   <script defer src="./assets/intBulma.js"></script>
+  <link rel="stylesheet" href="./assets/bulma.css">
 </head>
 
 <body>
 
-  <div class="block">
+  <div class="flex-container">
     <nav class="nav">
-      <div class="nav-left">
+      <div class="nav-center">
         <a href="" class="nav-item">
           <h1 class="title is-4 has-text-white">Bit Jumpers</h1>
         </a>
       </div>
 
       <div class="nav-center">
-        <a href="" class="nav-item">
+        <a href="https://github.com/Beefs4000/Random-Videogame-Selector" target="_blank" class="nav-item">
           <span class="icon">
-            <i class="fa fa-github has-text-black"></i>
-          </span>
-        </a>
-      </div>
-
-      <div class="nav-center">
-        <a href="" class="nav-item">
-          <span class="icon">
-            <i class="fa fa-twitter has-text-black"></i>
-          </span>
-        </a>
-      </div>
-
-      <div class="nav-center">
-        <a href="" class="nav-item">
-          <span class="icon">
-            <i class="fa fa-facebook has-text-black"></i>
+            <i class="fa fa-github has-text-black fa-2x"></i>
           </span>
         </a>
       </div>
@@ -167,6 +152,9 @@
     </div>
 
 
+    <a href="options.html">
+      <button class="button is-black">Let's find a game!</button>
+    </a>
 
   </section>
 </body>
