--- a/result.html
+++ b/result.html
@@ -24,6 +24,11 @@
 	<div id="gamehtml" class="row game">
 
   </div>
+	
+	<a href="options.html">
+      <button class="button is-black">Find a new game!</button>
+    </a>
+	
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="./assets/javascript/resultsjs.js"></script>
