updated result html
to enjoy your game

--- a/result.html
+++ b/result.html
@@ -20,15 +20,12 @@
     <h2 id="platforms">platforms</h2>
     <h2 id="release-date">date released</h2>
     <h2 id="stores">where to buy/play</h2>
+    <!-- <h2 id="store-links">store links</h2> -->
+    <link id="store-links" rel="stylesheet" href="" >
 	</div>
 	<div id="gamehtml" class="row game">
-
+    <h1 id="center">Enjoy your game!!</h1>
   </div>
-	
-	<a href="options.html">
-      <button class="button is-black">Find a new game!</button>
-    </a>
-	
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="./assets/javascript/resultsjs.js"></script>
