--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
     </div>
 
 
-    <a href="options.html">
-      <button class="button is-black">Let's find a game!</button>
-    </a>
+   <div class="box has-text-centered has-background-dark">
+      <a class="block" href="options.html">
+        <button class="button is-black">Let's find a game!</button>
+      </a>
+    </div>
 
   </section>
 </body>
