--- a/result.html
+++ b/result.html
@@ -26,6 +26,9 @@
 	<div id="gamehtml" class="row game">
     <h1 id="center">Enjoy your game!!</h1>
   </div>
+	<a class="block" href="options.html">
+        <button class="button is-black">Find a new game!</button>
+      </a>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="./assets/javascript/resultsjs.js"></script>
