--- a/result.html
+++ b/result.html
@@ -26,7 +26,7 @@
 	<div id="gamehtml" class="row game">
     <h1 id="center">Enjoy your game!!</h1>
   </div>
-	<a class="block" href="options.html">
+	<a id="start-btn" href="options.html">
         <button class="button is-black">Find a new game!</button>
       </a>
 </div>
