--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
     <h2 id="release-date">date released</h2>
     <h2 id="stores">where to buy/play</h2>
     <!-- <h2 id="store-links">store links</h2> -->
-    <link id="store-links" rel="stylesheet" href="" >
+    <a id="store-links" target="_blank" href="" >Wiki Game Link</a>
 	</div>
 	<div id="gamehtml" class="row game">
     <h1 id="center">Enjoy your game!!</h1>
